tests/baselines/reference/readonlyAssignmentInSubclassOfClassExpression.errors.txt
readonlyAssignmentInSubclassOfClassExpression.ts(4,14): error TS2540: Cannot assign to 'attrib' because it is a read-only property.


==== readonlyAssignmentInSubclassOfClassExpression.ts (1 errors) ====
    class C extends (class {} as new () => Readonly<{ attrib: number }>) {
        constructor() {
            super()
            this.attrib = 2
                 ~~~~~~
!!! error TS2540: Cannot assign to 'attrib' because it is a read-only property.
        }
    }
    